manifests/ingress/hubble-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
  namespace: kube-system
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
