manifests/ingress/adguard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: adguard

spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`adguard.lisa`)

    observability:
      accessLogs: true
      metrics: true
      tracing: true

    services:
      - name: adguard
        port: 80
  - kind: Rule
    match: Host(`adguard-admin.lisa`)
    services:
      - name: adguard
        port: 3000
