manifests/ingress/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd

spec:
  entryPoints:
    - webSecure
  routes:
  - kind: Rule
    match: Host(`argo.lisa`)

    observability:
      accessLogs: true
      metrics: true
      tracing: true

    services:
      - name: argocd-server
        port: 443
        scheme: https
    tls:
      passthrough: true
