manifests/ingress/blog-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`blog.cheesedipper.com`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - name: blog
          port: 80
          scheme: http
