manifests/ingress/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.lisa`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - name: prometheus-stack-grafana
          port: 80
  tls: {}
