manifests/ingress/memos-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memo
  namespace: memo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`memos.cheesedipper.com`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - name: memos-svc
          port: 5230
          scheme: http
