manifests/ingress/root-site.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: root-site
  namespace: root-site
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cheesedipper.com`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - name: root-site
          port: 80
          scheme: http
