manifests/ingress/umami-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: umami
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`analytics.cheesedipper.com`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - name: umami
          port: 3000
          scheme: http
